fini creation produit debut mouvement stock

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         <activity android:name=".Controler.StatActivity" />
         <activity android:name=".Controler.CreateProviderActivity" />
         <activity android:name=".Controler.CreateFrigoActivity" />
-        <activity android:name=".Controler.CreateProductActivity"></activity>
+        <activity android:name=".Controler.CreateProductActivity" />
+        <activity android:name=".Controler.SortieStockActivity"></activity>
     </application>
 
 </manifest>
