--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,9 @@
     package="bt.be.bddapplication">
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -24,7 +25,9 @@
         <activity android:name=".Controler.CreateProviderActivity" />
         <activity android:name=".Controler.CreateFrigoActivity" />
         <activity android:name=".Controler.CreateProductActivity" />
-        <activity android:name=".Controler.MouvementStockActivity"></activity>
+        <activity android:name=".Controler.MouvementStockActivity" />
+        <activity android:name=".Controler.ConfigActivity" />
+        <activity android:name=".Controler.CheckStockActivity"></activity>
     </application>
 
 </manifest>
